# nordigen-telegram-bot

./: .env.local  Nordigen.py  README.md  main.py  pyproject.toml  requirements.txt
